--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ main {
     border-radius: 8px;
 }
 
+.btn-second {
+    background-color: steelblue;
+    color: white;
+    border: 2px steelblue solid;
+    border-radius: 30%;
+    padding: 30px;
+}
+
 footer {
     display: flex;
     justify-content: center;
