--- a/styles.css
+++ b/styles.css
@@ -25,19 +25,72 @@ main {
     flex-direction: column;
     align-items: center;
     border: 2px steelblue solid;
-    width: 400px;
-    height: 600px;
+    width: 360px;
+    height: 550px;
     padding: 20px;
     margin: 80px;
     border-radius: 8px;
+    background-color: yellowgreen;
+}
+
+#calculator > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 7px;
+}
+
+#screen {
+    display: flex;
+    align-items: flex-end;
+    padding: 30px 142px;
+    background-color: orange;
+    border: 2px black solid;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+#screen > div {
+    align-self: flex-end;
+    font-size: 2rem;
+}
+
+.btn-first {
+    background-color: pink;
+    height: 60px;
+    width: 146px;
+    border: 2px black solid;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.btn-first:hover {
+    filter: brightness(80%);
+}
+
+.btn-first:active {
+    transform: scale(0.9);
 }
 
 .btn-second {
     background-color: steelblue;
     color: white;
-    border: 2px steelblue solid;
-    border-radius: 30%;
-    padding: 30px;
+    border: 2px black solid;
+    border-radius: 10%;
+    width: 70px;
+    height: 70px;
+    margin-top: 7px;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.btn-second:hover {
+    filter: brightness(80%);
+}
+
+.btn-second:active {
+    transform: scale(0.9);
 }
 
 footer {
