--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px steelblue solid;
+    border: 2px black solid;
     width: 360px;
     height: 550px;
     padding: 20px;
@@ -33,7 +33,7 @@ main {
     background-color: yellowgreen;
 }
 
-#calculator > div {
+#calculator > div:not(:first-child) {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -43,11 +43,13 @@ main {
 #screen {
     display: flex;
     align-items: flex-end;
-    padding: 30px 142px;
+    justify-content: flex-end;
+    padding: 20px;
     background-color: orange;
     border: 2px black solid;
     border-radius: 5px;
     margin: 10px 0;
+    width: calc(100% - 20px);
 }
 
 #screen > div {
