--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ main {
     align-items: center;
     border: 2px black solid;
     width: 360px;
-    height: 550px;
+    height: 530px;
     padding: 20px;
     margin: 80px;
     border-radius: 8px;
@@ -44,7 +44,7 @@ main {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    padding: 20px;
+    padding: 20px 22px;
     background-color: orange;
     border: 2px black solid;
     border-radius: 5px;
